--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-image: url("https://media.istockphoto.com/photos/neuron-system-picture-id937894966?b=1&k=20&m=937894966&s=170667a&w=0&h=ssQAK5oWYbJQ7Jsgi8Pnj86n8i2lxEryWvGp70ZeG0Y=");
+  background-size: cover;
+  height: 100vh;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form {
+  padding-top: 10rem;
+  font-size: x-large;
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+textarea {
+  height: 30vh;
 }
